--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,34 @@
-<p>register works!</p>
+<div class="container">
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="fullName">Full Name</label>
+      <input type="text" id="fullName" formControlName="fullName" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" id="email" formControlName="email" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label for="phoneNumber">Phone Number</label>
+      <input type="text" id="phoneNumber" formControlName="phoneNumber" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label for="otp">OTP</label>
+      <input type="text" id="otp" formControlName="otp" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" id="password" formControlName="password" class="form-control">
+    </div>
+
+    <button type="submit" class="btn btn-primary" [disabled]="!registerForm.valid">Submit</button>
+    <div class="login-link">
+      <span class="login">Do you have an account?</span>
+      <a routerLink="/login" class="button">Login</a> 
+  </div>
+  </form>
+</div>
