--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
   </select>
   <input type="text" class="search-input" placeholder="Search categories">
   <div class="search-icons">
-  <span class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></span>
+  <span class="search-icon"><i class="fas fa-search"></i></span>
   <span class="clear-search"><i class="fas fa-times"></i></span>
 </div>
 </div>
