--- a/src/app/components/fresh-recom/fresh-recom.component.html
+++ b/src/app/components/fresh-recom/fresh-recom.component.html
@@ -7,17 +7,17 @@
       <p>Price: $69.99</p>
     </div>
     <div class="product1">
-      <img src="assets/img2.jpeg" style="width: 225px; height:225px;" alt="">
+      <img src="assets/ornaments/s4.jpg" style="width: 225px; height:225px;" alt="">
       <h6>Product Name: Jewelry Box</h6>
       <p>Price: $69.99</p>
     </div>
     <div class="product1">
-      <img src="assets/image1.jpg" style="width: 225px; height:225px;" alt="">
+      <img src="assets/food/i13.jpg" style="width: 225px; height:225px;" alt="">
       <h6>Product Name: Jewelry Box</h6>
       <p>Price: $69.99</p>
     </div>
     <div class="product1">
-      <img src="assets/image1.jpg" style="width: 225px; height:225px;" alt="">
+      <img src="assets/decorative/d1.jpg" style="width: 225px; height:225px;" alt="">
       <h6>Product Name: Jewelry Box</h6>
       <p>Price: $69.99</p>
     </div>
