--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
   <img src="assets/logo.png" alt="Logo" class=" logo">
   <div class="searching-pt searching-mobile">
   <select  class="search-dropdown" >
-      <!-- <option value="" disabled selected>Select Product</option> -->
+      <option value="" disabled selected>Select Product</option>
       <option value="/product1">Product 1</option>
       <option value="/product2">Product 2</option>
       <option value="/product3">Product 3</option>
