--- a/src/app/components/quick-recom/quick-recom.component.html
+++ b/src/app/components/quick-recom/quick-recom.component.html
@@ -3,26 +3,26 @@
   <div class="product-details" [ngClass]="{'show-more': showMore}">
     <div class="product1">
       <a routerLink="/product">
-      <img src="assets/img1.jpg" style="width: 225px; height:225px;" alt="">
-      <h6>Product Name: Jewelry Box</h6>
+      <img src="assets/images4.jpg" style="width: 225px; height:225px;" alt="">
+      <h6>Product Name: ornaments</h6>
       <p>Price: $69.99</p>
     </a>
     </div>
     <div class="product1">
       <a routerLink="/product">
-      <img src="assets/img2.jpeg" style="width: 225px; height:225px;" alt="">
-      <h6>Product Name: Jewelry Box</h6>
+      <img src="assets/images7.jpg" style="width: 225px; height:225px;" alt="">
+      <h6>Product Name: food</h6>
       <p>Price: $69.99</p>
     </a>
     </div>
     <div class="product1">
-      <img src="assets/image1.jpg" style="width: 225px; height:225px;" alt="">
-      <h6>Product Name: Jewelry Box</h6>
+      <img src="assets/images8.jpg" style="width: 225px; height:225px;" alt="">
+      <h6>Product Name: Jewelry </h6>
       <p>Price: $69.99</p>  
     </div>
     <div class="product1">
-      <img src="assets/image1.jpg" style="width: 225px; height:225px;" alt="">
-      <h6>Product Name: Jewelry Box</h6>
+      <img src="assets/images9.jpg" style="width: 225px; height:225px;" alt="">
+      <h6>Product Name: food toy</h6>
       <p>Price: $69.99</p>
     </div>
   </div>
