--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,7 +1,7 @@
 <ngb-carousel>
-  <ng-template ngFor let-image [ngForOf]="images">
+  <ng-template ngFor let-image [ngForOf]="images"><!--used to iterate over a collection of images -->
   <ng-template ngbSlide>
-      <img [src]="image" class="d-block w-100" alt="Slide" style="height: 60vh; object-fit:fill">
+       <img [src]="image" class="d-block w-100" alt="Slide" style="height: 60vh; object-fit:fill">
   </ng-template>
   </ng-template>
 </ngb-carousel>
