--- a/src/app/components/food-beverages/food-beverages.component.css
+++ b/src/app/components/food-beverages/food-beverages.component.css
@@ -11,33 +11,32 @@
   justify-content: center;
   gap: 40px;
   font-size: 17px;
-  flex-wrap: wrap; /* Ensures that items can wrap onto the next line */
+  flex-wrap: wrap; 
 }
 
 .product1 {
   padding: 10px;
-  flex: 1 1 225px; /* Allows shrinking and growing but with a base of 225px */
+  flex: 1 1 225px; 
   display: flex;
   flex-direction: column;
   text-align: start;
   gap: 6px;
-  width: 25%; /* This will be overridden on smaller screens */
+  width: 25%; 
   border: 1px solid rgba(14, 4, 5, 0.2);
   border-radius: 10px;
 }
 
-/* Media Query for Mobile Screens */
+
 @media (max-width: 600px) {
   .product-details {
-    gap: 20px; /* Reduce the gap on smaller screens */
+    gap: 20px; 
   }
 
   .product1 {
-    flex: 1 1 48%; /* Adjusts each product to take roughly half the container's width */
-    width: 48%; /* Explicit width for clearer definition on mobile */
+    flex: 1 1 48%; 
+    width: 48%; 
   }
 }
-
 
 .product1 img {
   object-fit: fill;
@@ -90,7 +89,6 @@
   margin-top: 8px;
   border: none;
   background-color: white;
-
 }
 
 .toggle-button1 {
