--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,17 +5,19 @@
   </div>
     <div class="form-group">
       <label for="fullName">Full Name</label>
-      <input type="text" id="fullName" formControlName="fullName" class="form-control">
+      <input type="text" id="fullName" formControlName="fullName" class="form-control" pattern="[A-Za-z]+"
+      title="Full name should contain alphabetic characters"  required>
     </div>
 
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" formControlName="email" class="form-control">
+      <input type="email" id="email" formControlName="email" class="form-control" pattern="[a-zA-Z0-9._%+-]+@gmail\.com" title="Please enter a valid email address ending with '@gmail.com'" required>
     </div>
 
     <div class="form-group">
       <label for="phoneNumber">Phone Number</label>
-      <input type="text" id="phoneNumber" formControlName="phoneNumber" class="form-control">
+      <input type="text" id="phoneNumber" formControlName="phoneNumber" class="form-control" pattern="[0-9]{10}"
+      title="Please enter a 10-digit phone number"required>
       <button type="button" class="btn btn-secondary" (click)="requestOTP()" [disabled]="!(registerForm.get('phoneNumber')?.valid ?? false)">Get OTP</button>
 
     </div>
@@ -27,7 +29,13 @@
 
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" id="password" formControlName="password" class="form-control">
+      <input type="password" id="password" formControlName="password" class="form-control" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" 
+      title="Password must be:
+      at least 8 characters long,
+      at least one uppercase letter,
+      at least one lowercase letter,
+      at least one number,
+      at least one special character" required >
     </div>
 
     <button type="submit" class="btn btn-primary" >Submit</button>
